--- a/biome.jsonc
+++ b/biome.jsonc
@@ -28,7 +28,12 @@
       },
       "suspicious": {
         "noExplicitAny": "off", // Allow type any
-        "noConsole": "warn"
+        "noConsole": {
+          "level": "warn",
+          "options": {
+            "allow": ["assert", "error", "info", "warn"]
+          }
+        }
       }
     }
   },
