feat: Hoisting the Var in factory.command

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -22,6 +22,9 @@
       "correctness": {
         "useImportExtensions": "off" // For simple coding purposes
       },
+      "complexity": {
+        "noBannedTypes": "off" // Allow banned types
+      },
       "performance": {
         "noBarrelFile": "off", // For simple coding purposes
         "noReExportAll": "off" // For consistency in file separation
