--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "2.1.1",
-    "@discordjs/builders": "^1.11.2",
+    "@biomejs/biome": "2.2.4",
+    "@discordjs/builders": "^1.11.3",
     "@vitest/coverage-v8": "^3.2.4",
-    "discord-api-types": "^0.38.16",
+    "discord-api-types": "^0.38.24",
+    "discord-hono": "^0.19.5",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
 }
