--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "fix": "biome check --write .",
     "fix:unsafe": "biome check --write --unsafe .",
     "test": "biome check . && tsc && vitest run --coverage",
+    "bench": "npm run build && node bench/discord-hono.js",
     "build": "tsup src/index.ts --format esm --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "2.1.1",
-    "@discordjs/builders": "^1.11.2",
+    "@biomejs/biome": "2.2.4",
+    "@discordjs/builders": "^1.11.3",
     "@vitest/coverage-v8": "^3.2.4",
-    "discord-api-types": "^0.38.16",
+    "discord-api-types": "^0.38.24",
+    "discord-hono": "0.19.5",
+    "mitata": "^1.0.34",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
 }
