Add warning for explicit return types

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -37,6 +37,9 @@
             "allow": ["assert", "error", "info", "warn"]
           }
         }
+      },
+      "nursery": {
+        "useExplicitType": "warn"
       }
     }
   },
