chore: fix bench

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "fix": "biome check --write .",
     "fix:unsafe": "biome check --write --unsafe .",
     "test": "biome check . && tsc && vitest run --coverage",
-    "bench": "npm run build && node bench/discord-hono.js",
-    "build": "tsup src/index.ts --format esm --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm"
+    "build": "tsup src/index.ts --format esm --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm",
+    "bench:only": "node --expose-gc bench/discord-hono.js",
+    "bench": "npm run build && npm run bench:only"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
