--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@arethetypeswrong/cli": "^0.18.2",
     "@biomejs/biome": "2.2.4",
     "@discordjs/builders": "^1.11.3",
+    "@tsconfig/strictest": "^2.0.6",
     "@vitest/coverage-v8": "^3.2.4",
     "discord-api-types": "^0.38.26",
     "discord-hono": "0.19.6",
