--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,12 @@
 {
+  "extends": ["@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
-    /* Language and Environment */
     "target": "ES2022",
-    /* Modules */
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    /* JavaScript Support */
-    "checkJs": true,
-    /* Emit */
     "noEmit": true,
-    /* Interop Constraints */
     "forceConsistentCasingInFileNames": true,
-    /* Type Checking */
-    "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    /* Completeness */
-    "skipLibCheck": true
+    "erasableSyntaxOnly": true
   },
-  "include": ["src"]
+  "include": [".github/**/*", "bench/**/*", "src/**/*", "*"]
 }
