chore: add actions safe-chain

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,8 @@ jobs:
           node-version: 'lts/*'
           registry-url: 'https://registry.npmjs.org'
       - run: |
-          npm i -g npm@11.6.0
+          npm i -g npm@latest @aikidosec/safe-chain@latest
+          safe-chain setup-ci
           npm ci
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
