--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "biome check . && tsc && vitest run --coverage",
     "build": "tsup src/index.ts --format esm --dts --clean && attw -P . --ignore-rules cjs-resolves-to-esm",
     "bench:only": "node --expose-gc bench/discord-hono.js",
+    "bench:verify": "node --expose-gc bench/verify.js",
     "bench": "npm run build && npm run bench:only"
   },
   "devDependencies": {
