--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
-    "@biomejs/biome": "2.3.8",
+    "@biomejs/biome": "2.3.13",
     "@discordjs/builders": "^1.13.1",
     "@tsconfig/strictest": "^2.0.8",
-    "@vitest/coverage-v8": "^4.0.15",
-    "discord-api-types": "^0.38.36",
-    "discord-hono": "0.20.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "discord-api-types": "^0.38.38",
+    "discord-hono": "0.20.2",
+    "hono": "^4.11.7",
     "mitata": "^1.0.34",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.18"
   }
 }
